fixed logout.