@@ -9,16 +9,38 @@ version = "1.0-SNAPSHOT"
 repositories {
     mavenLocal()
     mavenCentral()
-    maven { setUrl("https://jitpack.io") }
     maven {
         setUrl("https://nexus.botwithus.net/repository/maven-snapshots/")
     }
 }
 
+configurations {
+    create("includeInJar") {
+        isTransitive = false
+    }
+}
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(20))
+    }
+}
+
 tasks.withType<JavaCompile> {
-    sourceCompatibility = "20"
-    targetCompatibility = "20"
     options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs = listOf("--enable-preview")
+}
+
+dependencies {
+    implementation("net.botwithus.rs3:botwithus-api:1.0.0-SNAPSHOT")
+    implementation("net.botwithus.xapi.public:api:1.0.0-SNAPSHOT")
+    "includeInJar"("net.botwithus.xapi.public:api:1.0.0-SNAPSHOT")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.2")
+    implementation("com.google.code.gson:gson:2.10.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.2")
 }
 
 val copyJar by tasks.register<Copy>("copyJar") {
@@ -27,13 +49,8 @@ val copyJar by tasks.register<Copy>("copyJar") {
     include("*.jar")
 }
 
-configurations {
-    create("includeInJar") {
-        this.isTransitive = false
-    }
-}
-
 tasks.named<Jar>("jar") {
+    archiveBaseName.set("ArcheologyTest")
     from({
         configurations["includeInJar"].map { zipTree(it) }
     })
@@ -41,15 +58,7 @@ tasks.named<Jar>("jar") {
     finalizedBy(copyJar)
 }
 
-dependencies {
-    implementation("net.botwithus.rs3:botwithus-api:1.0.0-SNAPSHOT")
-    implementation("net.botwithus.xapi.public:botwithusx-api:1.0.0-SNAPSHOT")
-    "includeInJar"("net.botwithus.xapi.public:botwithusx-api:1.0.0-SNAPSHOT")
-    implementation("com.google.code.gson:gson:2.10.1")
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.2")
-}
-
 tasks.getByName<Test>("test") {
     useJUnitPlatform()
+    jvmArgs = listOf("--enable-preview")
 }
